fix: playbook yaml

--- a/ansible/playbooks/osquery/templates/osqueryd.service.j2
+++ b/ansible/playbooks/osquery/templates/osqueryd.service.j2
@@ -9,7 +9,7 @@ RestartSec=10
 User=root
 Group=root
 EnvironmentFile={{ fleet_secret_env_file }}
-ExecStop={{ osqueryd_path | regex_replace('\\/$', '') }}/osqueryctl stop
+ExecStop=kill -SIGTERM $MAINPID
 ExecStart={{ osqueryd_path | regex_replace('\\/$', '') }}/osqueryd \
   --flagfile={{ osqueryd_flags_file }}\
   --host_identifier={{ ansible_hostname }} \
