refactor and doc ansible-osqueryd role

--- a/ansible/roles/ansible-osquery/templates/osqueryd.flags.j2
+++ b/ansible/roles/ansible-osquery/templates/osqueryd.flags.j2
@@ -2,6 +2,9 @@
 --tls_hostname={{ fleet_endpoint }}
 --enroll_secret_env=ENROLL_SECRET
 {% for key in osqueryd_flags.keys() %}
+{% if osqueryd_flags[key] == 'FLAG' %}
+--{{ key }}
+{% else %}
 --{{ key }}={{ osqueryd_flags[key] }}
+{% endif %}
 {% endfor %}
---force
